MASSIVE purple purge - convert ALL remaining purple/indigo to blue across entire site

--- a/colony-research.html
+++ b/colony-research.html
@@ -15,13 +15,13 @@
         .header {
             background: rgba(15, 23, 42, 0.95);
             backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(139, 92, 246, 0.3);
+            border-bottom: 1px solid rgba(0, 81, 230, 0.3);
             padding: 1.5rem 2rem;
             text-align: center;
         }
         .header h1 {
             font-size: 2rem;
-            background: linear-gradient(135deg, #8b5cf6, #ec4899);
+            background: linear-gradient(135deg, #0051E6, #00E1E6);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -35,12 +35,12 @@
         }
         .stat-card {
             background: rgba(30, 41, 59, 0.8);
-            border: 1px solid rgba(139, 92, 246, 0.3);
+            border: 1px solid rgba(0, 81, 230, 0.3);
             border-radius: 12px;
             padding: 1.5rem;
             text-align: center;
         }
-        .stat-val { font-size: 2.5rem; font-weight: 700; color: #8b5cf6; }
+        .stat-val { font-size: 2.5rem; font-weight: 700; color: #0051E6; }
         .stat-lbl { color: #94a3b8; font-size: 0.9rem; margin-top: 0.25rem; }
         .section {
             background: rgba(30, 41, 59, 0.8);
@@ -59,12 +59,12 @@
         }
         .finding {
             background: rgba(15, 23, 42, 0.6);
-            border-left: 3px solid #8b5cf6;
+            border-left: 3px solid #0051E6;
             padding: 1rem;
             margin-bottom: 0.75rem;
             border-radius: 0 8px 8px 0;
         }
-        .finding:hover { background: rgba(139, 92, 246, 0.1); }
+        .finding:hover { background: rgba(0, 81, 230, 0.1); }
         .finding-title {
             font-weight: 600;
             color: #f1f5f9;
@@ -82,7 +82,7 @@
             font-size: 0.8rem;
         }
         .score {
-            background: rgba(139, 92, 246, 0.2);
+            background: rgba(0, 81, 230, 0.2);
             color: #a78bfa;
             padding: 0.2rem 0.5rem;
             border-radius: 4px;
@@ -106,7 +106,7 @@
         .trend-tag {
             display: inline-block;
             background: rgba(236, 72, 153, 0.2);
-            color: #f472b6;
+            color: #019BE6;
             padding: 0.3rem 0.75rem;
             border-radius: 20px;
             margin: 0.25rem;
@@ -127,17 +127,17 @@
         .paper-link { color: #c4b5fd; font-size: 0.9rem; }
         .connection-arrow { color: #22c55e; font-weight: 600; font-size: 0.85rem; padding-left: 1.5rem; }
         /* Deep insight cards */
-        .deep-insight-card { border-left: 3px solid #8b5cf6; cursor: pointer; transition: all 0.2s; }
+        .deep-insight-card { border-left: 3px solid #0051E6; cursor: pointer; transition: all 0.2s; }
         .deep-insight-card:hover { background: #2d3748; }
         .deep-insight-card .finding-content { color: #e2e8f0; line-height: 1.6; white-space: pre-line; }
         .deep-insight-card .finding-content.collapsed { max-height: 120px; overflow: hidden; position: relative; }
         .deep-insight-card .finding-content.collapsed::after { content: ''; position: absolute; bottom: 0; left: 0; right: 0; height: 40px; background: linear-gradient(transparent, #1e293b); }
         .deep-insight-card.expanded .finding-content { max-height: none; }
         .deep-insight-card.expanded .finding-content::after { display: none; }
-        .expand-hint { color: #8b5cf6; font-size: 0.8rem; margin-top: 0.5rem; }
+        .expand-hint { color: #0051E6; font-size: 0.8rem; margin-top: 0.5rem; }
         .deep-insight-card.expanded .expand-hint { display: none; }
         /* Topic filter buttons */
-        .topic-btn { background: rgba(99,102,241,0.15); border: 1px solid rgba(99,102,241,0.3); color: #a5b4fc; padding: 0.4rem 0.8rem; border-radius: 20px; cursor: pointer; font-size: 0.8rem; transition: all 0.2s; }
+        .topic-btn { background: rgba(99,102,241,0.15); border: 1px solid rgba(99,102,241,0.3); color: #019BE6; padding: 0.4rem 0.8rem; border-radius: 20px; cursor: pointer; font-size: 0.8rem; transition: all 0.2s; }
         .topic-btn:hover { background: rgba(99,102,241,0.3); }
         .topic-btn.active { background: #0051E6; color: white; border-color: #0051E6; }
         .deep-insight-card.hidden { display: none; }
@@ -160,7 +160,7 @@
         /* Connection cards clickable hint */
         .connection-card { cursor: pointer; }
         .connection-card:hover { background: #2d3748; }
-        .connection-card:hover .connection-arrow { color: #8b5cf6 !important; }
+        .connection-card:hover .connection-arrow { color: #0051E6 !important; }
     </style>
 </head>
 <body>
@@ -269,7 +269,7 @@
                     <div class="finding connection-card" onclick="document.getElementById('deep-insights').scrollIntoView({behavior: 'smooth'})" title="Click to see why these are connected">
                         <div class="connection-papers">
                             <div class="paper-link">📄 ${(c.paper1 || '').substring(0, 80)}</div>
-                            <div class="connection-arrow">↔ ${c.score}% related — <span style="color:#8b5cf6">see why ↓</span></div>
+                            <div class="connection-arrow">↔ ${c.score}% related — <span style="color:#0051E6">see why ↓</span></div>
                             <div class="paper-link">📄 ${(c.paper2 || '').substring(0, 80)}</div>
                         </div>
                         <div class="finding-meta">
