--- a/devscope.html
+++ b/devscope.html
@@ -32,7 +32,7 @@
             --error: #f87171;
             --warning: #fbbf24;
             --info: #00E1E6;
-            --network: #c084fc;
+            --network: #019BE6;
             --success: #4ade80;
         }
 
@@ -179,7 +179,7 @@
         .logo-icon {
             width: 72px;
             height: 72px;
-            background: linear-gradient(135deg, var(--primary), #ec4899);
+            background: linear-gradient(135deg, var(--primary), #00E1E6);
             border-radius: 20px;
             display: flex;
             align-items: center;
@@ -247,7 +247,7 @@
 
         .feature-icon.critical { background: rgba(239, 68, 68, 0.15); color: var(--critical); }
         .feature-icon.warning { background: rgba(251, 191, 36, 0.15); color: var(--warning); }
-        .feature-icon.network { background: rgba(192, 132, 252, 0.15); color: var(--network); }
+        .feature-icon.network { background: rgba(1, 155, 230, 0.15); color: var(--network); }
         .feature-icon.perf { background: rgba(56, 189, 248, 0.15); color: var(--info); }
         .feature-icon.access { background: rgba(74, 222, 128, 0.15); color: var(--success); }
         .feature-icon.security { background: rgba(37, 99, 235, 0.15); color: var(--primary); }
