--- a/generate-icons.html
+++ b/generate-icons.html
@@ -121,7 +121,7 @@
             // Staff dots
             const dots = [
                 {x: 149, y: 232, color: '#0051E6'},
-                {x: 256, y: 232, color: '#8b5cf6'},
+                {x: 256, y: 232, color: '#0051E6'},
                 {x: 362, y: 232, color: '#f59e0b'},
                 {x: 149, y: 384, color: '#06b6d4'},
                 {x: 362, y: 384, color: '#10b981'}
