--- a/index-backup.html
+++ b/index-backup.html
@@ -26,8 +26,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <!-- Favicon - Inline SVG Data URL -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%236366f1'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%236366f1'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%230051E6'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
             --border: rgba(255, 255, 255, 0.08);
             --success: #10b981;
             --warning: #f59e0b;
-            --focus-ring: rgba(99, 102, 241, 0.5);
+            --focus-ring: rgba(0, 81, 230, 0.5);
         }
 
         html {
@@ -171,7 +171,7 @@
             visibility: hidden;
             transform: translateY(20px) scale(0.8);
             transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-            box-shadow: 0 4px 20px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 4px 20px rgba(0, 81, 230, 0.4);
         }
 
         .scroll-to-top.visible {
@@ -182,7 +182,7 @@
 
         .scroll-to-top:hover {
             transform: translateY(-5px) scale(1.1);
-            box-shadow: 0 8px 30px rgba(99, 102, 241, 0.5);
+            box-shadow: 0 8px 30px rgba(0, 81, 230, 0.5);
         }
 
         .scroll-to-top:active {
@@ -604,7 +604,7 @@
             right: 0;
             bottom: 0;
             background:
-                radial-gradient(ellipse at 20% 30%, rgba(99, 102, 241, 0.08), transparent 50%),
+                radial-gradient(ellipse at 20% 30%, rgba(0, 81, 230, 0.08), transparent 50%),
                 radial-gradient(ellipse at 80% 70%, rgba(34, 211, 238, 0.06), transparent 50%);
             pointer-events: none;
             z-index: 2;
@@ -697,7 +697,7 @@
             border-radius: 24px;
             overflow: hidden;
             box-shadow:
-                0 0 60px rgba(99, 102, 241, 0.15),
+                0 0 60px rgba(0, 81, 230, 0.15),
                 0 0 120px rgba(34, 211, 238, 0.08);
         }
 
@@ -706,7 +706,7 @@
             position: absolute;
             inset: 0;
             border-radius: 24px;
-            border: 1px solid rgba(99, 102, 241, 0.2);
+            border: 1px solid rgba(0, 81, 230, 0.2);
             pointer-events: none;
         }
 
@@ -967,15 +967,15 @@
         .btn-primary {
             background: linear-gradient(135deg, var(--primary), var(--primary-light));
             color: white;
-            box-shadow: 0 10px 40px rgba(99, 102, 241, 0.3);
+            box-shadow: 0 10px 40px rgba(0, 81, 230, 0.3);
             transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
         }
 
         .btn-primary:hover {
             transform: translateY(-3px) scale(1.02);
             box-shadow: 
-                0 20px 50px rgba(99, 102, 241, 0.4),
-                0 0 30px rgba(99, 102, 241, 0.2);
+                0 20px 50px rgba(0, 81, 230, 0.4),
+                0 0 30px rgba(0, 81, 230, 0.2);
         }
 
         .btn-primary:active {
@@ -1102,7 +1102,7 @@
             transform: translate(-50%, -50%);
             width: 300px;
             height: 300px;
-            background: radial-gradient(circle, rgba(99, 102, 241, 0.08), transparent 70%);
+            background: radial-gradient(circle, rgba(0, 81, 230, 0.08), transparent 70%);
             pointer-events: none;
             z-index: -1;
         }
@@ -1145,7 +1145,7 @@
 
         /* Free Lesson Card */
         .free-lesson {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(34, 211, 238, 0.1));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.1), rgba(34, 211, 238, 0.1));
             border: 1px solid var(--border);
             border-radius: 24px;
             padding: 3rem;
@@ -1163,8 +1163,8 @@
 
         .free-lesson:hover {
             transform: translateY(-5px);
-            border-color: rgba(99, 102, 241, 0.3);
-            box-shadow: 0 25px 50px rgba(99, 102, 241, 0.15);
+            border-color: rgba(0, 81, 230, 0.3);
+            box-shadow: 0 25px 50px rgba(0, 81, 230, 0.15);
         }
 
         .free-lesson::before {
@@ -1233,7 +1233,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.12), rgba(34, 211, 238, 0.05));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.12), rgba(34, 211, 238, 0.05));
             opacity: 0;
             transition: opacity 0.4s ease;
             border-radius: 20px;
@@ -1257,7 +1257,7 @@
             transform: translateY(-12px);
             border-color: transparent;
             box-shadow: 
-                0 25px 50px rgba(99, 102, 241, 0.25),
+                0 25px 50px rgba(0, 81, 230, 0.25),
                 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
@@ -1292,7 +1292,7 @@
 
         .service-card:hover .service-icon {
             transform: scale(1.15) rotate(8deg);
-            box-shadow: 0 15px 35px rgba(99, 102, 241, 0.5);
+            box-shadow: 0 15px 35px rgba(0, 81, 230, 0.5);
             animation: none;
         }
 
@@ -1345,7 +1345,7 @@
         }
 
         .product-card {
-            background: linear-gradient(135deg, var(--bg-card), rgba(99, 102, 241, 0.05));
+            background: linear-gradient(135deg, var(--bg-card), rgba(0, 81, 230, 0.05));
             border: 1px solid var(--border);
             border-radius: 24px;
             padding: 3rem;
@@ -1403,8 +1403,8 @@
 
         /* Featured product card */
         .product-card.featured {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(34, 211, 238, 0.1));
-            border: 1px solid rgba(99, 102, 241, 0.3);
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.15), rgba(34, 211, 238, 0.1));
+            border: 1px solid rgba(0, 81, 230, 0.3);
         }
 
         .product-card.featured::before {
@@ -1414,14 +1414,14 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.05), transparent);
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.05), transparent);
             border-radius: 24px;
             opacity: 1;
         }
 
         .product-card.featured:hover {
             border-color: var(--primary);
-            box-shadow: 0 20px 60px rgba(99, 102, 241, 0.25);
+            box-shadow: 0 20px 60px rgba(0, 81, 230, 0.25);
         }
 
         /* Spinning wheel icon animation */
@@ -1487,10 +1487,10 @@
         }
 
         .mini-service:hover {
-            background: rgba(99, 102, 241, 0.1);
+            background: rgba(0, 81, 230, 0.1);
             border-color: var(--primary);
             transform: translateY(-8px);
-            box-shadow: 0 15px 30px rgba(99, 102, 241, 0.12);
+            box-shadow: 0 15px 30px rgba(0, 81, 230, 0.12);
         }
 
         .mini-service .price {
@@ -1546,7 +1546,7 @@
 
         /* AI Demo Section */
         .ai-demo {
-            background: linear-gradient(180deg, transparent, rgba(99, 102, 241, 0.05), transparent);
+            background: linear-gradient(180deg, transparent, rgba(0, 81, 230, 0.05), transparent);
         }
 
         .demo-container {
@@ -1700,16 +1700,16 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(34, 211, 238, 0.05));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.1), rgba(34, 211, 238, 0.05));
             opacity: 0;
             transition: opacity 0.4s ease;
         }
 
         .stat-card:hover {
-            background: rgba(99, 102, 241, 0.08);
+            background: rgba(0, 81, 230, 0.08);
             transform: translateY(-8px) scale(1.02);
-            border-color: rgba(99, 102, 241, 0.3);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+            border-color: rgba(0, 81, 230, 0.3);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.15);
         }
 
         .stat-card:hover::before {
@@ -1756,7 +1756,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(180deg, rgba(99, 102, 241, 0.08), transparent);
+            background: linear-gradient(180deg, rgba(0, 81, 230, 0.08), transparent);
             opacity: 0;
             transition: opacity 0.4s ease;
         }
@@ -1784,9 +1784,9 @@
 
         .why-card:hover {
             transform: translateY(-12px);
-            border-color: rgba(99, 102, 241, 0.3);
+            border-color: rgba(0, 81, 230, 0.3);
             box-shadow: 
-                0 25px 50px rgba(99, 102, 241, 0.2),
+                0 25px 50px rgba(0, 81, 230, 0.2),
                 0 10px 20px rgba(0, 0, 0, 0.15);
         }
 
@@ -1810,7 +1810,7 @@
         .why-card:hover .why-icon {
             transform: scale(1.15) rotate(8deg);
             animation: none;
-            box-shadow: 0 15px 35px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 15px 35px rgba(0, 81, 230, 0.4);
         }
 
         .why-card h3 {
@@ -1843,11 +1843,11 @@
         }
 
         .industry-tag:hover {
-            background: rgba(99, 102, 241, 0.15);
+            background: rgba(0, 81, 230, 0.15);
             border-color: var(--primary);
             color: var(--text);
             transform: translateY(-3px) scale(1.05);
-            box-shadow: 0 10px 25px rgba(99, 102, 241, 0.15);
+            box-shadow: 0 10px 25px rgba(0, 81, 230, 0.15);
         }
 
         /* Testimonials */
@@ -1869,12 +1869,12 @@
         .testimonial-card:hover {
             transform: translateY(-8px);
             border-color: var(--primary);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.15);
         }
 
         .testimonial-card:hover .author-avatar {
             transform: scale(1.1);
-            box-shadow: 0 8px 20px rgba(99, 102, 241, 0.3);
+            box-shadow: 0 8px 20px rgba(0, 81, 230, 0.3);
         }
 
         .author-avatar {
@@ -1935,7 +1935,7 @@
 
         /* CTA Section */
         .cta-section {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(34, 211, 238, 0.08));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.15), rgba(34, 211, 238, 0.08));
             border-top: 1px solid var(--border);
             border-bottom: 1px solid var(--border);
             position: relative;
@@ -1950,7 +1950,7 @@
             transform: translate(-50%, -50%);
             width: 600px;
             height: 600px;
-            background: radial-gradient(circle, rgba(99, 102, 241, 0.1), transparent 70%);
+            background: radial-gradient(circle, rgba(0, 81, 230, 0.1), transparent 70%);
             animation: ctaPulse 6s ease-in-out infinite;
             pointer-events: none;
         }
@@ -2324,7 +2324,7 @@
            FEATURED TOOLS 3D CAROUSEL
            ============================================ */
         .featured-tools-section {
-            background: linear-gradient(180deg, transparent, rgba(99, 102, 241, 0.03), transparent);
+            background: linear-gradient(180deg, transparent, rgba(0, 81, 230, 0.03), transparent);
             overflow: hidden;
         }
 
@@ -2370,7 +2370,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(ellipse at 50% 0%, rgba(99, 102, 241, 0.15), transparent 60%);
+            background: radial-gradient(ellipse at 50% 0%, rgba(0, 81, 230, 0.15), transparent 60%);
             opacity: 0;
             transition: opacity 0.4s ease;
             pointer-events: none;
@@ -2415,9 +2415,9 @@
         }
 
         .carousel-card .card-badge.legal {
-            background: rgba(99, 102, 241, 0.2);
+            background: rgba(0, 81, 230, 0.2);
             color: var(--primary-light);
-            border: 1px solid rgba(99, 102, 241, 0.3);
+            border: 1px solid rgba(0, 81, 230, 0.3);
         }
 
         .carousel-card .card-badge.utility {
@@ -2440,13 +2440,13 @@
 
         .carousel-card .card-badge.productivity {
             background: rgba(236, 72, 153, 0.2);
-            color: #ec4899;
+            color: #00E1E6;
             border: 1px solid rgba(236, 72, 153, 0.3);
         }
 
         .carousel-card .card-badge.fun {
             background: rgba(168, 85, 247, 0.2);
-            color: #a855f7;
+            color: #4C82E6;
             border: 1px solid rgba(168, 85, 247, 0.3);
         }
 
@@ -2507,7 +2507,7 @@
 
         .carousel-card .card-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(99, 102, 241, 0.3);
+            box-shadow: 0 8px 20px rgba(0, 81, 230, 0.3);
         }
 
         /* Carousel Navigation */
@@ -2533,7 +2533,7 @@
             background: var(--primary);
             border-color: var(--primary);
             transform: translateY(-50%) scale(1.1);
-            box-shadow: 0 10px 30px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 10px 30px rgba(0, 81, 230, 0.4);
         }
 
         .carousel-nav svg {
@@ -2697,7 +2697,7 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0 4px 20px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 4px 20px rgba(0, 81, 230, 0.4);
             transition: all 0.3s ease;
             position: relative;
             border: none;
@@ -2705,7 +2705,7 @@
 
         .chatbot-toggle:hover {
             transform: scale(1.1);
-            box-shadow: 0 6px 30px rgba(99, 102, 241, 0.5);
+            box-shadow: 0 6px 30px rgba(0, 81, 230, 0.5);
         }
 
         .chatbot-toggle i {
@@ -5319,7 +5319,7 @@
 
         // "SEMINARS" in pink/magenta neon
         neonCtx.shadowBlur = glowIntensity;
-        neonCtx.shadowColor = '#ec4899';
+        neonCtx.shadowColor = '#00E1E6';
         neonCtx.font = 'bold 36px Arial';
         neonCtx.fillStyle = `rgba(236, 72, 153, ${flicker})`;
         neonCtx.fillText('SEMINARS', 200, 140);
@@ -5513,7 +5513,7 @@
 
         // "PRO ADS" in magenta neon
         poster3Ctx.shadowBlur = 35 * flicker;
-        poster3Ctx.shadowColor = '#d946ef';
+        poster3Ctx.shadowColor = '#00E1E6';
         poster3Ctx.font = 'bold 42px Arial';
         poster3Ctx.fillStyle = `rgba(217, 70, 239, ${flicker})`;
         poster3Ctx.textAlign = 'center';
@@ -5751,10 +5751,10 @@
         // Node definitions
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
-            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#8b5cf6' },
+            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#0051E6' },
             { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#4C82E6' },
             { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
-            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#8b5cf6' },
+            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#0051E6' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
             { x: 630, y: 70, label: 'Post', icon: '📤', color: '#1d9bf0' },
         ];
@@ -6448,7 +6448,7 @@
 
         // Box 2: AI Processing
         if (animProgress > 0.25) {
-            wbCtx.strokeStyle = '#8b5cf6';
+            wbCtx.strokeStyle = '#0051E6';
             wbCtx.lineWidth = 2;
             wbCtx.strokeRect(200, 80, 120, 50);
             wbCtx.font = '12px Arial';
@@ -6459,7 +6459,7 @@
             wbCtx.save();
             wbCtx.translate(300, 105);
             wbCtx.rotate(time / 500);
-            wbCtx.strokeStyle = '#8b5cf6';
+            wbCtx.strokeStyle = '#0051E6';
             wbCtx.beginPath();
             wbCtx.arc(0, 0, 8, 0, Math.PI * 2);
             wbCtx.stroke();
@@ -7538,9 +7538,9 @@
 
                         ctx.closePath();
                         const gradient = ctx.createLinearGradient(0, 0, width, height);
-                        gradient.addColorStop(0, `rgba(99, 102, 241, ${alpha})`);
+                        gradient.addColorStop(0, `rgba(0, 81, 230, ${alpha})`);
                         gradient.addColorStop(0.3, `rgba(34, 211, 238, ${alpha})`);
-                        gradient.addColorStop(0.6, `rgba(99, 102, 241, ${alpha})`);
+                        gradient.addColorStop(0.6, `rgba(0, 81, 230, ${alpha})`);
                         gradient.addColorStop(1, `rgba(34, 211, 238, ${alpha})`);
                         ctx.strokeStyle = gradient;
                         ctx.lineWidth = (6 + layer * 3) * scale;
