--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             visibility: hidden;
             transform: translateY(20px) scale(0.8);
             transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-            box-shadow: 0 4px 20px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 4px 20px rgba(0, 81, 230, 0.4);
         }
 
         .scroll-to-top.visible {
@@ -194,7 +194,7 @@
 
         .scroll-to-top:hover {
             transform: translateY(-5px) scale(1.1);
-            box-shadow: 0 8px 30px rgba(99, 102, 241, 0.5);
+            box-shadow: 0 8px 30px rgba(0, 81, 230, 0.5);
         }
 
         .scroll-to-top:active {
@@ -606,10 +606,10 @@
             right: 0;
             bottom: 0;
             background:
-                radial-gradient(ellipse 80% 60% at 20% 40%, rgba(99, 102, 241, 0.18), transparent 60%),
+                radial-gradient(ellipse 80% 60% at 20% 40%, rgba(0, 81, 230, 0.18), transparent 60%),
                 radial-gradient(ellipse 60% 80% at 75% 25%, rgba(34, 211, 238, 0.12), transparent 55%),
-                radial-gradient(ellipse 50% 50% at 50% 80%, rgba(129, 140, 248, 0.1), transparent 50%),
-                radial-gradient(ellipse 90% 40% at 60% 10%, rgba(99, 102, 241, 0.06), transparent 70%);
+                radial-gradient(ellipse 50% 50% at 50% 80%, rgba(76, 130, 230, 0.1), transparent 50%),
+                radial-gradient(ellipse 90% 40% at 60% 10%, rgba(0, 81, 230, 0.06), transparent 70%);
             background-size: 200% 200%, 180% 180%, 160% 160%, 220% 220%;
             animation: gradientShiftHero 18s ease infinite;
             pointer-events: none;
@@ -687,7 +687,7 @@
             border-radius: 24px;
             overflow: hidden;
             box-shadow:
-                0 0 60px rgba(99, 102, 241, 0.15),
+                0 0 60px rgba(0, 81, 230, 0.15),
                 0 0 120px rgba(34, 211, 238, 0.08);
         }
 
@@ -696,7 +696,7 @@
             position: absolute;
             inset: 0;
             border-radius: 24px;
-            border: 1px solid rgba(99, 102, 241, 0.2);
+            border: 1px solid rgba(0, 81, 230, 0.2);
             pointer-events: none;
         }
 
@@ -1277,7 +1277,7 @@
             transform: translate(-50%, -50%);
             width: 300px;
             height: 300px;
-            background: radial-gradient(circle, rgba(99, 102, 241, 0.08), transparent 70%);
+            background: radial-gradient(circle, rgba(0, 81, 230, 0.08), transparent 70%);
             pointer-events: none;
             z-index: -1;
         }
@@ -1320,7 +1320,7 @@
 
         /* Free Lesson Card */
         .free-lesson {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(34, 211, 238, 0.1));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.1), rgba(34, 211, 238, 0.1));
             border: 1px solid var(--border);
             border-radius: 24px;
             padding: 3rem;
@@ -1338,8 +1338,8 @@
 
         .free-lesson:hover {
             transform: translateY(-5px);
-            border-color: rgba(99, 102, 241, 0.3);
-            box-shadow: 0 25px 50px rgba(99, 102, 241, 0.15);
+            border-color: rgba(0, 81, 230, 0.3);
+            box-shadow: 0 25px 50px rgba(0, 81, 230, 0.15);
         }
 
         .free-lesson::before {
@@ -1408,7 +1408,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.12), rgba(34, 211, 238, 0.05));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.12), rgba(34, 211, 238, 0.05));
             opacity: 0;
             transition: opacity 0.4s ease;
             border-radius: 20px;
@@ -1432,7 +1432,7 @@
             transform: translateY(-12px);
             border-color: transparent;
             box-shadow: 
-                0 25px 50px rgba(99, 102, 241, 0.25),
+                0 25px 50px rgba(0, 81, 230, 0.25),
                 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
@@ -1467,7 +1467,7 @@
 
         .service-card:hover .service-icon {
             transform: scale(1.15) rotate(8deg);
-            box-shadow: 0 15px 35px rgba(99, 102, 241, 0.5);
+            box-shadow: 0 15px 35px rgba(0, 81, 230, 0.5);
             animation: none;
         }
 
@@ -1532,7 +1532,7 @@
         .featured-product:hover {
             transform: translateY(-8px);
             border-color: var(--primary);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.15);
         }
 
         .product-badge-new {
@@ -1667,7 +1667,7 @@
         .more-products-link a:hover {
             color: var(--text);
             border-color: var(--primary);
-            background: rgba(99, 102, 241, 0.1);
+            background: rgba(0, 81, 230, 0.1);
         }
 
         @media (max-width: 768px) {
@@ -1678,7 +1678,7 @@
 
         /* AI Research Lab Section */
         .research-section {
-            background: linear-gradient(180deg, var(--bg-dark) 0%, rgba(99, 102, 241, 0.05) 50%, var(--bg-dark) 100%);
+            background: linear-gradient(180deg, var(--bg-dark) 0%, rgba(0, 81, 230, 0.05) 50%, var(--bg-dark) 100%);
             position: relative;
             padding-top: 3rem;
         }
@@ -1700,13 +1700,13 @@
         .research-card:hover {
             transform: translateY(-6px);
             border-color: var(--primary);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.15);
         }
 
         .research-card.main-card {
             grid-column: span 2;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), var(--bg-card));
-            border-color: rgba(99, 102, 241, 0.3);
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.1), var(--bg-card));
+            border-color: rgba(0, 81, 230, 0.3);
         }
 
         .research-card h3 {
@@ -1820,7 +1820,7 @@
         }
 
         .product-card {
-            background: linear-gradient(135deg, var(--bg-card), rgba(99, 102, 241, 0.05));
+            background: linear-gradient(135deg, var(--bg-card), rgba(0, 81, 230, 0.05));
             border: 1px solid var(--border);
             border-radius: 24px;
             padding: 2rem;
@@ -1880,8 +1880,8 @@
 
         /* Featured product card */
         .product-card.featured {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(34, 211, 238, 0.1));
-            border: 1px solid rgba(99, 102, 241, 0.3);
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.15), rgba(34, 211, 238, 0.1));
+            border: 1px solid rgba(0, 81, 230, 0.3);
         }
 
         .product-card.featured::before {
@@ -1891,14 +1891,14 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.05), transparent);
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.05), transparent);
             border-radius: 24px;
             opacity: 1;
         }
 
         .product-card.featured:hover {
             border-color: var(--primary);
-            box-shadow: 0 20px 60px rgba(99, 102, 241, 0.25);
+            box-shadow: 0 20px 60px rgba(0, 81, 230, 0.25);
         }
 
         /* Spinning wheel icon animation */
@@ -1969,10 +1969,10 @@
         }
 
         .mini-service:hover {
-            background: rgba(99, 102, 241, 0.1);
+            background: rgba(0, 81, 230, 0.1);
             border-color: var(--primary);
             transform: translateY(-8px);
-            box-shadow: 0 15px 30px rgba(99, 102, 241, 0.12);
+            box-shadow: 0 15px 30px rgba(0, 81, 230, 0.12);
         }
 
         .mini-service .price {
@@ -2028,7 +2028,7 @@
 
         /* AI Demo Section */
         .ai-demo {
-            background: linear-gradient(180deg, transparent, rgba(99, 102, 241, 0.05), transparent);
+            background: linear-gradient(180deg, transparent, rgba(0, 81, 230, 0.05), transparent);
         }
 
         .demo-container {
@@ -2182,16 +2182,16 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(34, 211, 238, 0.05));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.1), rgba(34, 211, 238, 0.05));
             opacity: 0;
             transition: opacity 0.4s ease;
         }
 
         .stat-card:hover {
-            background: rgba(99, 102, 241, 0.08);
+            background: rgba(0, 81, 230, 0.08);
             transform: translateY(-8px) scale(1.02);
-            border-color: rgba(99, 102, 241, 0.3);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+            border-color: rgba(0, 81, 230, 0.3);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.15);
         }
 
         .stat-card:hover::before {
@@ -2238,7 +2238,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(180deg, rgba(99, 102, 241, 0.08), transparent);
+            background: linear-gradient(180deg, rgba(0, 81, 230, 0.08), transparent);
             opacity: 0;
             transition: opacity 0.4s ease;
         }
@@ -2266,9 +2266,9 @@
 
         .why-card:hover {
             transform: translateY(-12px);
-            border-color: rgba(99, 102, 241, 0.3);
+            border-color: rgba(0, 81, 230, 0.3);
             box-shadow: 
-                0 25px 50px rgba(99, 102, 241, 0.2),
+                0 25px 50px rgba(0, 81, 230, 0.2),
                 0 10px 20px rgba(0, 0, 0, 0.15);
         }
 
@@ -2292,7 +2292,7 @@
         .why-card:hover .why-icon {
             transform: scale(1.15) rotate(8deg);
             animation: none;
-            box-shadow: 0 15px 35px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 15px 35px rgba(0, 81, 230, 0.4);
         }
 
         .why-card h3 {
@@ -2325,11 +2325,11 @@
         }
 
         .industry-tag:hover {
-            background: rgba(99, 102, 241, 0.15);
+            background: rgba(0, 81, 230, 0.15);
             border-color: var(--primary);
             color: var(--text);
             transform: translateY(-3px) scale(1.05);
-            box-shadow: 0 10px 25px rgba(99, 102, 241, 0.15);
+            box-shadow: 0 10px 25px rgba(0, 81, 230, 0.15);
         }
 
         /* Testimonials */
@@ -2351,12 +2351,12 @@
         .testimonial-card:hover {
             transform: translateY(-8px);
             border-color: var(--primary);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.15);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.15);
         }
 
         .testimonial-card:hover .author-avatar {
             transform: scale(1.1);
-            box-shadow: 0 8px 20px rgba(99, 102, 241, 0.3);
+            box-shadow: 0 8px 20px rgba(0, 81, 230, 0.3);
         }
 
         .author-avatar {
@@ -2417,7 +2417,7 @@
 
         /* CTA Section */
         .cta-section {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(34, 211, 238, 0.08));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.15), rgba(34, 211, 238, 0.08));
             border-top: 1px solid var(--border);
             border-bottom: 1px solid var(--border);
             position: relative;
@@ -2432,7 +2432,7 @@
             transform: translate(-50%, -50%);
             width: 600px;
             height: 600px;
-            background: radial-gradient(circle, rgba(99, 102, 241, 0.1), transparent 70%);
+            background: radial-gradient(circle, rgba(0, 81, 230, 0.1), transparent 70%);
             animation: ctaPulse 6s ease-in-out infinite;
             pointer-events: none;
         }
@@ -2806,7 +2806,7 @@
            FEATURED TOOLS 3D CAROUSEL
            ============================================ */
         .featured-tools-section {
-            background: linear-gradient(180deg, transparent, rgba(99, 102, 241, 0.03), transparent);
+            background: linear-gradient(180deg, transparent, rgba(0, 81, 230, 0.03), transparent);
             overflow: hidden;
         }
 
@@ -2852,7 +2852,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(ellipse at 50% 0%, rgba(99, 102, 241, 0.15), transparent 60%);
+            background: radial-gradient(ellipse at 50% 0%, rgba(0, 81, 230, 0.15), transparent 60%);
             opacity: 0;
             transition: opacity 0.4s ease;
             pointer-events: none;
@@ -2897,9 +2897,9 @@
         }
 
         .carousel-card .card-badge.legal {
-            background: rgba(99, 102, 241, 0.2);
+            background: rgba(0, 81, 230, 0.2);
             color: var(--primary-light);
-            border: 1px solid rgba(99, 102, 241, 0.3);
+            border: 1px solid rgba(0, 81, 230, 0.3);
         }
 
         .carousel-card .card-badge.utility {
@@ -2928,7 +2928,7 @@
 
         .carousel-card .card-badge.fun {
             background: rgba(168, 85, 247, 0.2);
-            color: #a855f7;
+            color: #4C82E6;
             border: 1px solid rgba(168, 85, 247, 0.3);
         }
 
@@ -2989,7 +2989,7 @@
 
         .carousel-card .card-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(99, 102, 241, 0.3);
+            box-shadow: 0 8px 20px rgba(0, 81, 230, 0.3);
         }
 
         /* Carousel Navigation */
@@ -3015,7 +3015,7 @@
             background: var(--primary);
             border-color: var(--primary);
             transform: translateY(-50%) scale(1.1);
-            box-shadow: 0 10px 30px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 10px 30px rgba(0, 81, 230, 0.4);
         }
 
         .carousel-nav svg {
@@ -3179,7 +3179,7 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0 4px 20px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 4px 20px rgba(0, 81, 230, 0.4);
             transition: all 0.3s ease;
             position: relative;
             border: none;
@@ -3187,7 +3187,7 @@
 
         .chatbot-toggle:hover {
             transform: scale(1.1);
-            box-shadow: 0 6px 30px rgba(99, 102, 241, 0.5);
+            box-shadow: 0 6px 30px rgba(0, 81, 230, 0.5);
         }
 
         .chatbot-toggle i {
@@ -8153,9 +8153,9 @@
 
                         ctx.closePath();
                         const gradient = ctx.createLinearGradient(0, 0, width, height);
-                        gradient.addColorStop(0, `rgba(99, 102, 241, ${alpha})`);
+                        gradient.addColorStop(0, `rgba(0, 81, 230, ${alpha})`);
                         gradient.addColorStop(0.3, `rgba(34, 211, 238, ${alpha})`);
-                        gradient.addColorStop(0.6, `rgba(99, 102, 241, ${alpha})`);
+                        gradient.addColorStop(0.6, `rgba(0, 81, 230, ${alpha})`);
                         gradient.addColorStop(1, `rgba(34, 211, 238, ${alpha})`);
                         ctx.strokeStyle = gradient;
                         ctx.lineWidth = (6 + layer * 3) * scale;
