--- a/ri-heatmap.html
+++ b/ri-heatmap.html
@@ -54,8 +54,8 @@
     </div>
     <div class="legend">
         <strong>Marker Colors</strong>
-        <div class="legend-row"><i style="background:#7c3aed"></i> $1M+</div>
-        <div class="legend-row"><i style="background:#ec4899"></i> $750K-$1M</div>
+        <div class="legend-row"><i style="background:#0008E6"></i> $1M+</div>
+        <div class="legend-row"><i style="background:#00E1E6"></i> $750K-$1M</div>
         <div class="legend-row"><i style="background:#f59e0b"></i> $500K-$750K</div>
         <div class="legend-row"><i style="background:#10b981"></i> $300K-$500K</div>
         <div class="legend-row"><i style="background:#06b6d4"></i> Under $300K</div>
@@ -70,8 +70,8 @@ const P=
         }).addTo(map);
         
         function priceColor(price) {
-            if (price >= 1000000) return '#7c3aed';
-            if (price >= 750000) return '#ec4899';
+            if (price >= 1000000) return '#0008E6';
+            if (price >= 750000) return '#00E1E6';
             if (price >= 500000) return '#f59e0b';
             if (price >= 300000) return '#10b981';
             return '#06b6d4';
