--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -37,7 +37,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            background: linear-gradient(135deg, #0051E6, #8b5cf6);
+            background: linear-gradient(135deg, #0051E6, #0051E6);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             text-decoration: none;
@@ -258,7 +258,7 @@
                         </div>
                         <div style="color:#10b981;font-weight:bold;margin-top:0.5rem">You save: $29,951 💰</div>
                     </div>
-                    <div style="margin-top:1rem;padding:0.75rem;background:rgba(99,102,241,0.15);border-radius:8px;font-size:0.85rem;color:#a5b4fc">
+                    <div style="margin-top:1rem;padding:0.75rem;background:rgba(99,102,241,0.15);border-radius:8px;font-size:0.85rem;color:#019BE6">
                         💡 <strong>No broker license needed</strong> — you're selling your own property. We just help you find buyers.
                     </div>
                 </div>
