--- a/swiftshot-privacy.html
+++ b/swiftshot-privacy.html
@@ -6,7 +6,7 @@
     <title>Privacy Policy - SwiftShot | AIBridges</title>
     <meta name="description" content="Privacy policy for SwiftShot Chrome extension. 100% local processing, no data collection, no tracking.">
 
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%236366f1'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -130,7 +130,7 @@
             transform: translateX(-50%);
             width: 900px;
             height: 900px;
-            background: radial-gradient(circle, rgba(99, 102, 241, 0.08) 0%, transparent 60%);
+            background: radial-gradient(circle, rgba(0, 81, 230, 0.08) 0%, transparent 60%);
             pointer-events: none;
         }
 
@@ -178,7 +178,7 @@
         }
 
         .section:hover {
-            border-color: rgba(99, 102, 241, 0.3);
+            border-color: rgba(0, 81, 230, 0.3);
         }
 
         .section h2 {
@@ -351,7 +351,7 @@
 
         <!-- Overview -->
         <div class="section">
-            <h2><i class="fas fa-info-circle" style="background: rgba(99, 102, 241, 0.15); color: var(--primary);"></i> Overview</h2>
+            <h2><i class="fas fa-info-circle" style="background: rgba(0, 81, 230, 0.15); color: var(--primary);"></i> Overview</h2>
             <p>SwiftShot is a Chrome extension developed by <strong>AIBridges</strong> (Cranston, RI). It provides screenshot capture, annotation, redaction, OCR, voice commands, and encrypted export features for web pages.</p>
             <p>This extension is designed with a privacy-first architecture. All image processing, text recognition, encryption, and annotation happens entirely within your browser. No screenshots, images, or document content are ever uploaded to any external server.</p>
         </div>
@@ -396,7 +396,7 @@
 
         <!-- OCR Processing -->
         <div class="section">
-            <h2><i class="fas fa-font" style="background: rgba(139, 92, 246, 0.15); color: #c084fc;"></i> OCR Text Extraction</h2>
+            <h2><i class="fas fa-font" style="background: rgba(0, 81, 230, 0.15); color: #019BE6;"></i> OCR Text Extraction</h2>
             <p>Optical character recognition (OCR) is performed entirely on your device using <strong>Tesseract.js</strong>, an open-source library that runs in the browser. No images or extracted text are sent to any external server for processing.</p>
             <p>The OCR engine, language data, and all processing run locally within the extension's context. Extracted text remains in your browser and is only included in exports that you manually save to your device.</p>
         </div>
@@ -409,7 +409,7 @@
 
         <!-- Chrome Permissions -->
         <div class="section">
-            <h2><i class="fas fa-puzzle-piece" style="background: rgba(99, 102, 241, 0.15); color: var(--primary);"></i> Chrome Permissions &amp; Why We Need Them</h2>
+            <h2><i class="fas fa-puzzle-piece" style="background: rgba(0, 81, 230, 0.15); color: var(--primary);"></i> Chrome Permissions &amp; Why We Need Them</h2>
             <p>SwiftShot requests the following Chrome permissions:</p>
 
             <div class="permission-item">
@@ -474,7 +474,7 @@
 
         <!-- Children -->
         <div class="section">
-            <h2><i class="fas fa-child" style="background: rgba(139, 92, 246, 0.15); color: #c084fc;"></i> Children's Privacy</h2>
+            <h2><i class="fas fa-child" style="background: rgba(0, 81, 230, 0.15); color: #019BE6;"></i> Children's Privacy</h2>
             <p>SwiftShot is a general-purpose productivity tool. We do not knowingly collect any personal information from anyone, including children under the age of 13. Since no personal data is collected or transmitted, no special provisions are necessary under COPPA.</p>
         </div>
 
@@ -486,7 +486,7 @@
 
         <!-- Contact -->
         <div class="section">
-            <h2><i class="fas fa-envelope" style="background: rgba(99, 102, 241, 0.15); color: var(--primary);"></i> Contact Us</h2>
+            <h2><i class="fas fa-envelope" style="background: rgba(0, 81, 230, 0.15); color: var(--primary);"></i> Contact Us</h2>
             <p>If you have questions about this privacy policy or the data practices of SwiftShot, please contact us:</p>
             <ul>
                 <li><i class="fas fa-building neutral"></i> <strong>AIBridges</strong> &mdash; Cranston, Rhode Island</li>
