--- a/swiftshot.html
+++ b/swiftshot.html
@@ -669,7 +669,7 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon" style="background: rgba(139, 92, 246, 0.1);"><i class="fas fa-font" style="color: #c084fc;"></i></div>
+                    <div class="feature-icon" style="background: rgba(0, 81, 230, 0.1);"><i class="fas fa-font" style="color: #019BE6;"></i></div>
                     <h3>OCR &amp; Word Export</h3>
                     <p>On-device text recognition. Extract text from screenshots and export directly to Word (.docx) documents with metadata.</p>
                     <span class="badge badge-pro">Pro</span>
