--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
     <meta name="theme-color" content="#0a0a0f">
 
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%236366f1'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -163,7 +163,7 @@
         .page-header {
             padding: 8rem 2rem 4rem;
             text-align: center;
-            background: linear-gradient(180deg, rgba(99, 102, 241, 0.1) 0%, transparent 100%);
+            background: linear-gradient(180deg, rgba(0, 81, 230, 0.1) 0%, transparent 100%);
             position: relative;
             overflow: hidden;
         }
@@ -176,7 +176,7 @@
             transform: translateX(-50%);
             width: 600px;
             height: 600px;
-            background: radial-gradient(circle, rgba(99, 102, 241, 0.15) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(0, 81, 230, 0.15) 0%, transparent 70%);
             pointer-events: none;
         }
 
@@ -226,7 +226,7 @@
         .blog-card:hover {
             transform: translateY(-8px);
             border-color: var(--primary);
-            box-shadow: 0 20px 40px rgba(99, 102, 241, 0.2);
+            box-shadow: 0 20px 40px rgba(0, 81, 230, 0.2);
         }
 
         .blog-card-image {
@@ -268,7 +268,7 @@
             background: linear-gradient(135deg, #f59e0b, #ef4444);
         }
         .blog-card:nth-child(6) .blog-card-image::before {
-            background: linear-gradient(135deg, #4C82E6, #8b5cf6);
+            background: linear-gradient(135deg, #4C82E6, #0051E6);
         }
 
         .blog-card-content {
@@ -331,7 +331,7 @@
 
         /* CTA Section */
         .cta-section {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.15), rgba(34, 211, 238, 0.1));
+            background: linear-gradient(135deg, rgba(0, 81, 230, 0.15), rgba(34, 211, 238, 0.1));
             padding: 4rem 2rem;
             text-align: center;
             margin: 4rem 0 0;
@@ -367,7 +367,7 @@
 
         .cta-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 40px rgba(99, 102, 241, 0.4);
+            box-shadow: 0 15px 40px rgba(0, 81, 230, 0.4);
         }
 
         /* Footer */
