--- a/restaurant-scheduler.html
+++ b/restaurant-scheduler.html
@@ -27,7 +27,7 @@
             
             /* Professional muted role colors - using subtle indicators */
             --role-server: #0051E6;
-            --role-cook: #8b5cf6;
+            --role-cook: #0051E6;
             --role-host: #06b6d4;
             --role-bartender: #f59e0b;
             --role-busser: #10b981;
